--- a/rooms/templates/core/basic_decision.html
+++ b/rooms/templates/core/basic_decision.html
@@ -12,8 +12,16 @@
     <body>
 
 	    <table>
-	    	{% for alternative in alternatives %}
+	    	<tr>
+	    		<th>Альтернатива</th>
+	    		{% for vector in marks|get_item:alternatives.0 %}
+		    		<th>
+		    			{{ vector.mark.criterion.name }}
+		    		</th>
+		    	{% endfor %}	
+	    	</tr>
 
+	    	{% for alternative in alternatives %}
 	    	<tr>
 	    		<td>{{ alternative }}</td>
 	    		{% for vector in marks|get_item:alternative %}
@@ -24,17 +32,18 @@
 	    	{% endfor %}
 	    </table>
 
-	    <p>У всех качественных оценок задано число: {{ quality_check }}</p>
-	    {% for link in quality_urls %}
-	    	<a href={{ link.link }} target="_blank">{{ link.mark.criterion.name }} : {{ link.mark.name }}</a>
-	    {% endfor %}
+	    {% if quality_check %}
+		    <p>Все качественные оценки проранжированны</p>
+		    <a href="{% url 'core:paretto_view' %}">Дальше</a>	
+	    {% else %}
+	    	<p>Не все качественные оценки проранжированны</p>
+	    	{% for link in quality_urls %}
+		    	<a href={{ link.link }} target="_blank">{{ link.mark.criterion.name }} : {{ link.mark.name }}</a>
+		    	<br>
+		    {% endfor %}
+		{% endif %}
 
-	    <a href="{% url 'core:paretto_view' %}">Дальше</a>	
-
-	    <p>Установлена важность криетериев: </p>
-	    <p>Данные не противоречат друг другу: </p>
-
-
+		
 	    
     </body>
  </html>
