--- a/rooms/templates/core/basic_decision_3.html
+++ b/rooms/templates/core/basic_decision_3.html
@@ -12,8 +12,16 @@
     <body>
 
 	    <table>
-	    	{% for alternative in alternatives %}
+	    	<tr>
+	    		<th>Альтернатива</th>
+	    		{% for vector in marks|get_item:alternatives.0 %}
+		    		<th>
+		    			{{ vector.mark.criterion.name }}
+		    		</th>
+		    	{% endfor %}	
+	    	</tr>
 
+	    	{% for alternative in alternatives %}
 	    	<tr>
 	    		<td>{{ alternative }}</td>
 	    		{% for vector in marks|get_item:alternative %}
@@ -22,6 +30,19 @@
 	    	</tr>
 
 	    	{% endfor %}
+
+	    	<tr>
+	    		<th>Весы</th>
+	    		{% for vector in marks|get_item:alternatives.0 %}
+	    			{% if vector.mark.criterion.weight != None %}
+		    		<th>
+		    			{{ vector.mark.criterion.weight }}
+		    		</th>
+		    		{% else %}
+		    		<th>-</th>
+		    		{% endif %}
+		    	{% endfor %}	
+	    	</tr>
 	    </table>
 
 	    <br>
@@ -30,14 +51,17 @@
 	    {% if weights_check %}
 	    <p>Весовые коеффициенты для всех критериев заданы</p>
 	    {% else %}
-	    <p>Весовые коеффициенты для заданы не для всех критериев</p>
+	    <p>Весовые коеффициенты заданы не для всех критериев</p>
 	    {% for link in weights_urls %}
 	    	<a href={{ link.url }} target="_blank">{{ link.name }}</a>
 	    	<br>
 	    {% endfor %}
 	    {% endif %}
 
-	    <a href="{% url 'core:weights_view' %}">Дальше</a>	
+	    <br>
+	    {%  if weights_check %}
+	    <a href="{% url 'core:convolution_view' %}">Дальше</a>
+	    {% endif %}
 
     </body>
  </html>
