--- a/rooms/templates/core/basic_decision_4.html
+++ b/rooms/templates/core/basic_decision_4.html
@@ -19,6 +19,7 @@
 		    			{{ vector.mark.criterion.name }}
 		    		</th>
 		    	{% endfor %}	
+		    	<th>Свертка</th>
 	    	</tr>
 
 	    	{% for alternative in alternatives %}
@@ -27,14 +28,27 @@
 	    		{% for vector in marks|get_item:alternative %}
 	    			<td>{{ vector.mark.name }}</td>
 	    		{% endfor %}
+	    		<td>{{ results|get_item:alternative }}</td>
 	    	</tr>
 
 	    	{% endfor %}
+
+	    	<tr>
+	    		<th>Весы</th>
+	    		{% for vector in marks|get_item:alternatives.0 %}
+	    			{% if vector.mark.criterion.weight != None %}
+		    		<th>
+		    			{{ vector.mark.criterion.weight }}
+		    		</th>
+		    		{% else %}
+		    		<th>-</th>
+		    		{% endif %}
+		    	{% endfor %}	
+	    	</tr>
 	    </table>
 
 	    <br>
-	    
-	    <p>Оптимизация по Паретто:</p>
+	    <br>
 
 	    <table>
 	    	<tr>
@@ -44,21 +58,34 @@
 		    			{{ vector.mark.criterion.name }}
 		    		</th>
 		    	{% endfor %}	
+		    	<th>Свертка</th>
 	    	</tr>
 
-	    	{% for alternative in p_alternatives %}
+	    	{% for alternative in alternatives %}
 	    	<tr>
 	    		<td>{{ alternative }}</td>
-	    		{% for vector in p_marks|get_item:alternative %}
-	    			<td>{{ vector.mark.name }}</td>
+	    		{% for vector in marks|get_item:alternative %}
+	    			<td>{{ vector.mark.normalized }}</td>
 	    		{% endfor %}
+	    		<td>{{ results|get_item:alternative }}</td>
 	    	</tr>
 
 	    	{% endfor %}
+
+	    	<tr>
+	    		<th>Весы</th>
+	    		{% for vector in marks|get_item:alternatives.0 %}
+	    			{% if vector.mark.criterion.weight != None %}
+		    		<th>
+		    			{{ vector.mark.criterion.weight }}
+		    		</th>
+		    		{% else %}
+		    		<th>-</th>
+		    		{% endif %}
+		    	{% endfor %}	
+	    	</tr>
 	    </table>
 
-	    <br>
-	    <a href="{% url 'core:normalized_view' %}">Дальше</a>	
 
     </body>
  </html>
